# winpthreads

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: i686-w64-mingw32-toolchain.cmake
include/: pthread.h
scripts/: bootstrap.sh
src/: misc.c  misc.h  spinlock.c  thread.c  try-enter-critsec-9x.cc  utils.c  utils.h
